Updates from Overleaf

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -400,7 +400,7 @@ The model comparisons showed that the models without control for spatial and/or 
  & \textbf{	Variable	} & \textbf{	none	} & \textbf{	phylo	} & \textbf{	spatial	} & \textbf{	spatialphylo	} 	\\
 \midrule
 \multirow{2}{*}{Shared language}
- 	&	Significant effect	&	\cellcolor{spec_color_lightgreen!50} EA033, EA033:Shoreline, Time depth, Time depth:Shoreline	&	\cellcolor{spec_color_lightgreen!50} EA033:Shoreline, Time depth:Shoreline	&	\cellcolor{spec_color_lightgreen!50} EA033, Time depth &		\\
+ 	&	Significant effect	&	\cellcolor{spec_color_lightgreen!50} EA033, EA033:Shoreline, Time depth, Time depth:Shoreline	&	\cellcolor{spec_color_lightgreen!50} EA033:Shoreline	&	\cellcolor{spec_color_lightgreen!50} EA033, Time depth &		\\
 		&	WAIC	&	238.63	&	211.2	&	211.33	&	 \textbf{209.94}	\\
   \midrule
 \multirow{2}{*}{Overnight sailing}	&	Significant effect	&	\cellcolor{spec_color_lightgreen!50} EA033:Shoreline, Shoreline, Time depth:Shoreline	&	Time depth:Shoreline	&	\cellcolor{spec_color_lightgreen!50} EA033:Shoreline, Time depth:Shoreline &	Time depth:Shoreline		\\
