rm for big sync

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -192,7 +192,7 @@
 %\newpage
 
 
-\section*{Funding information}
+\section*{Funding information test}
 The research leading to this paper has received funding from the Department of Linguistic and Cultural Evolution at the Max Planck Institute for Evolutionary Anthropology, the School of Culture, History and Language at the Australian National University and from the Australian Research Council through The Wellsprings of Linguistic Diversity Laureate Project (awarded to Nicholas Evans 2014-2018) and the Centre of Excellence for the Dynamics of Language (CoEDL).
 
 \section*{Acknowledgements}
